tests/NormalTests/paczka1/small_fuzzy/60788838.err
Error in line 3: WGlf1 A40e 8,0
Error in line 10: ImSj A698 52,8
Error in line 9: tOjFBULZ8 S352 3,9
